website/versioned_docs/version-0.5.0/cluster-management/getting-started.mdx
---
title: Getting started
sidebar_position: 1
hide_title: true
---

import TierLabel from "../_components/TierLabel";
import CodeBlock from "@theme/CodeBlock";
import BrowserOnly from "@docusaurus/BrowserOnly";

<h1>
  {frontMatter.title} <TierLabel tiers="enterprise" />
</h1>

## Creating your first CAPD Cluster

If you've followed the [Upgrade guide](../enterprise/upgrading.mdx) you should have a management cluster ready to roll. Next up we'll

### 1. Configure a capi provider

If you have not already done so, install and configure at least one CAPI provider.

See [Cluster API Providers](cluster-api-providers.mdx) page for more details on providers. He're we'll continue with `kind` and `capd` as an example.

```bash
# Enable support for `ClusterResourceSet`s for automatically installing CNIs
export EXP_CLUSTER_RESOURCE_SET=true
clusterctl init --infrastructure docker
```

### 2. Add a template

See [CAPI Templates](templates.mdx) page for more details on this topic. Once we load a template we can use it in the UI to create clusters!

import CapdTemplate from "!!raw-loader!./assets/templates/capd-template.yaml";

Download the template below to your config repository path, then commit and push to your git origin.

<BrowserOnly>
  {() => (
    <CodeBlock className="language-bash">
      curl -o .weave-gitops/apps/capi/templates/capd-template.yaml{" "}
      {window.location.protocol}//{window.location.host}
      {require("./assets/templates/capd-template.yaml").default}
    </CodeBlock>
  )}
</BrowserOnly>

<CodeBlock
  title=".weave-gitops/apps/capi/templates/capd-template.yaml"
  className="language-yaml"
>
  {CapdTemplate}
</CodeBlock>

## Automatically install a CNI with `ClusterResourceSet`s

We can use `ClusterResourceSet`s to automatically install CNI's on a new cluster, here we use calico as an example.

### 1. Add a CRS to install a CNI

Create a calico configmap and a CRS as follows:

import CalicoCRS from "!!raw-loader!./assets/bootstrap/calico-crs.yaml";

<BrowserOnly>
  {() => (
    <CodeBlock className="language-bash">
      mkdir -p .weave-gitops/apps/capi/bootstrap{"\n"}
      curl -o .weave-gitops/apps/capi/bootstrap/calico-crs.yaml {
        window.location.protocol
      }//{window.location.host}
      {require("./assets/bootstrap/calico-crs.yaml").default}
      {"\n"}
      curl -o .weave-gitops/apps/capi/bootstrap/calico-crs-configmap.yaml{" "}
      {window.location.protocol}//{window.location.host}
      {require("./assets/bootstrap/calico-crs-configmap.yaml").default}
    </CodeBlock>
  )}
</BrowserOnly>

<CodeBlock
  title=".weave-gitops/apps/capi/boostrap/calico-crs.yaml"
  className="language-yaml"
>
  {CalicoCRS}
</CodeBlock>

The full [`calico-crs-configmap.yaml`](./assets/bootstrap/calico-crs-configmap.yaml) is a bit large to display inline here but make sure to download it to `.weave-gitops/apps/capi/bootstrap/calico-crs-configmap.yaml` too, manually or with the above `curl` command.

## Profiles and clusters

WGE can automatically install profiles onto new clusters

#### 1. Add a helmrepo

import ProfileRepo from "!!raw-loader!./assets/profiles/profile-repo.yaml";

A profile is an enhanced helm chart. When publishing profiles to helm repositories make sure to include the `weave.works/profile` in `Chart.yaml`. These annotated profiles will appear in WGE

```
annotations:
  weave.works/profile: nginx-profile
```

Download the profile repositry below to your config repository path then commit and push. Make sure to update the url to point to a helm repository containing your profiles.

<BrowserOnly>
  {() => (
    <CodeBlock className="language-bash">
      mkdir -p .weave-gitops/apps/capi/profiles{"\n"}
      curl -o .weave-gitops/apps/capi/profiles/profile-repo.yaml {
        window.location.protocol
      }
      //{window.location.host}
      {require("./assets/profiles/profile-repo.yaml").default}
    </CodeBlock>
  )}
</BrowserOnly>

<CodeBlock
  title=".weave-gitops/apps/capi/profiles/profile-repo.yaml"
  className="language-yaml"
>
  {ProfileRepo}
</CodeBlock>

#### 3. Add a cluster bootstrap config

Create a cluster bootstrap config as follows:

```bash
 kubectl create secret generic my-pat --from-literal GITHUB_TOKEN=$GITHUB_TOKEN
```

import CapiGitopsCDC from "!!raw-loader!./assets/bootstrap/capi-gitops-cluster-bootstrap-config.yaml";

Download the config with

<BrowserOnly>
  {() => (
    <CodeBlock className="language-bash">
      mkdir -p .weave-gitops/apps/capi/bootstrap{"\n"}
      curl -o .weave-gitops/apps/capi/bootstrap/capi-gitops-cluster-bootstrap-config.yaml{" "}
      {window.location.protocol}
      //{window.location.host}
      {
        require("./assets/bootstrap/capi-gitops-cluster-bootstrap-config.yaml")
          .default
      }
    </CodeBlock>
  )}
</BrowserOnly>

Then update the `GITOPS_REPO` variable to point to your cluster

<CodeBlock
  title=".weave-gitops/apps/capi/boostrap/capi-gitops-cluster-bootstrap-config.yaml"
  className="language-yaml"
>
  {CapiGitopsCDC}
</CodeBlock>

## Test

You should now be able to create a new cluster from your template and install profiles onto it with a single Pull Request via the WGE UI!
